--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,8 @@
-<footer class="bg-dark text-light">
-    <div class="footer">
-        <p class="text-center">copyright &copy;2021 <span>techie bloggers</span> | created by <span>akash das</span>
+<footer class="bg-dark text-light position-absolute bottom-0">
+    <div class="footer" style="width: 100vw; height: 60px; padding: 20px 0;">
+        <p class="text-center text-break fs-6" style="word-spacing: 2px; letter-spacing: 2px;">
+            Copyright &copy;2021 <span class="text-muted fw-bold">Techie Bloggers</span> |
+            Created By <span class="text-muted fw-bold">Akash Das</span>
         </p>
     </div>
 </footer>
