--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -7,20 +7,23 @@
                     <h4 class="mb-4 text-primary">Create A New Account</h4>
                     <form action="/auth/signup" method="POST">
                         <div class="form-group mb-3">
-                            <label for="username" class="form-label">Enter Your Username (Must be unique)</label>
-                            <input type="text" name="username" id="username" class="form-control">
+                            <label for="username" class="form-label">Enter your username (Must be unique)</label>
+                            <input type="text" name="username" id="username" class="form-control"
+                                placeholder="Enter username">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="email" class="form-label">Enter A Valid Email</label>
-                            <input type="email" name="email" id="email" class="form-control">
+                            <label for="email" class="form-label">Enter a valid email</label>
+                            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="password" class="form-label">Enter A Strong Password</label>
-                            <input type="password" name="password" id="password" class="form-control">
+                            <label for="password" class="form-label">Enter a strong password</label>
+                            <input type="password" name="password" id="password" class="form-control"
+                                placeholder="Enter password">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="confirmPassword" class="form-label">Confirm Your Password</label>
-                            <input type="password" name="confirmPassword" id="confirmPassword" class="form-control">
+                            <label for="confirmPassword" class="form-label">Confirm your password</label>
+                            <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
+                                placeholder="Enter password">
                         </div>
                         <input type="submit" class="btn btn-primary" value="Signup">
                     </form>
