--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="bg-dark text-light position-absolute bottom-0">
-    <div class="footer" style="width: 100vw; height: 60px; padding: 20px 0;">
+<footer class="bg-dark text-light">
+    <div style="width: 100%; height: 60px; padding: 20px 0;">
         <p class="text-center text-break fs-6" style="word-spacing: 2px; letter-spacing: 2px;">
             Copyright &copy;2021 <span class="text-muted fw-bold">Techie Bloggers</span> |
             Created By <span class="text-muted fw-bold">Akash Das</span>
