--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -13,10 +13,10 @@
                     <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/auth/login">Login</a>
+                    <a class="nav-link" href="/auth/login">Log in</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/auth/signup">Sign up</a>
+                <li class="nav-item ">
+                    <a class="nav-link btn btn-outline-primary btn-sm" href="/auth/signup">Sign up</a>
                 </li>
             </ul>
 
