--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -8,22 +8,38 @@
                     <form action="/auth/signup" method="POST">
                         <div class="form-group mb-3">
                             <label for="username" class="form-label">Enter your username (Must be unique)</label>
-                            <input type="text" name="username" id="username" class="form-control"
+                            <input type="text" name="username" id="username"
+                                class="form-control <%= error.username ? 'is-invalid' : '' %>"
                                 placeholder="Enter username">
+                            <div class="invalid-feedback">
+                                <%= error.username && error.username %>
+                            </div>
                         </div>
                         <div class="form-group mb-3">
                             <label for="email" class="form-label">Enter a valid email</label>
-                            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email">
+                            <input type="email" name="email" id="email"
+                                class="form-control  <%= error.email ? 'is-invalid' : '' %>" placeholder="Enter email">
+                            <div class="invalid-feedback">
+                                <%= error.email && error.email %>
+                            </div>
                         </div>
                         <div class="form-group mb-3">
                             <label for="password" class="form-label">Enter a strong password</label>
-                            <input type="password" name="password" id="password" class="form-control"
+                            <input type="password" name="password" id="password"
+                                class="form-control   <%= error.password ? 'is-invalid' : '' %>"
                                 placeholder="Enter password">
+                            <div class="invalid-feedback">
+                                <%= error.password && error.password %>
+                            </div>
                         </div>
                         <div class="form-group mb-3">
                             <label for="confirmPassword" class="form-label">Confirm your password</label>
-                            <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
+                            <input type="password" name="confirmPassword" id="confirmPassword"
+                                class="form-control <%= error.confirmPassword ? 'is-invalid' : '' %>"
                                 placeholder="Enter password">
+                            <div class="invalid-feedback">
+                                <%= error.confirmPassword && error.confirmPassword %>
+                            </div>
                         </div>
                         <input type="submit" class="btn btn-primary" value="Sign up">
                     </form>
