--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -3,24 +3,39 @@
     <div class="container my-4">
         <div class="row">
             <div class="col-md-6 offset-md-3">
+
                 <div class="card card-body">
                     <h4 class="mb-4 text-primary">Login to your account</h4>
+
                     <form action="/auth/login" method="POST">
+
                         <div class="form-group mb-3">
                             <label for="email" class="form-label">Enter email</label>
-                            <input type="email" name="email" id="email" class="form-control" placeholder="Enter email">
+                            <input type="email" name="email" id="email"
+                                class="form-control <%= error.email ? 'is-invalid' : '' %>" placeholder="Enter email">
+                            <div class="invalid-feedback">
+                                <%= error.email && error.email %>
+                            </div>
                         </div>
+
                         <div class="form-group mb-3">
                             <label for="password" class="form-label">Enter password</label>
-                            <input type="password" name="password" id="password" class="form-control"
+                            <input type="password" name="password" id="password"
+                                class="form-control <%= error.password ? 'is-invalid' : '' %>"
                                 placeholder="Enter password">
+                            <div class="invalid-feedback">
+                                <%= error.password && error.password %>
+                            </div>
                         </div>
+
                         <input type="submit" class="btn btn-primary" value="Log in">
                     </form>
+
                     <a href="/auth/signup" class="my-3 text-center">
                         Don't have an account? Create one
                     </a>
                 </div>
+
             </div>
         </div>
     </div>
