navbar toggle fixes

--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -54,7 +54,7 @@
                         <input type="submit" class="btn btn-primary" value="Sign up">
                     </form>
 
-                    <a href="/auth/login" class="my-3 text-center">
+                    <a href="/auth/login" class="my-3 text-center card-link">
                         Already have an account? Login here
                     </a>
                 </div>
@@ -65,7 +65,8 @@
 
 
     <%- include('../../partials/footer.ejs') %>
+        <%- include('../../partials/bootstrapCdnJs.ejs') %>
 
-        </body>
+            </body>
 
-        </html>
+            </html>
