--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="/auth/login">Log in</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link btn btn-outline-primary btn-sm" href="/auth/signup">Sign up</a>
+                    <a class="nav-link" href="/auth/signup">Sign up</a>
                 </li>
             </ul>
 
