--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -12,12 +12,19 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/auth/login">Log in</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="/auth/signup">Sign up</a>
-                </li>
+
+                <% if (isLoggedIn) { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/logout">Logout</a>
+                    </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/auth/login">Log in</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="/auth/signup">Sign up</a>
+                        </li>
+                        <% } %>
             </ul>
 
             <form class="d-flex">
