--- a/views/pages/dashboard/create-profile.ejs
+++ b/views/pages/dashboard/create-profile.ejs
@@ -1,5 +1,10 @@
 <%- include('../../partials/header.ejs') %>
 
+    <!-- Croppie CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.5/croppie.css"
+        integrity="sha512-2eMmukTZtvwlfQoG8ztapwAH5fXaQBzaMqdljLopRSA0i6YKM8kBAOrSSykxu9NN9HrtD45lIqfONLII2AFL/Q=="
+        crossorigin="anonymous" />
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2"></div>
@@ -20,7 +25,7 @@
 
                                     <div class="input-group my-3">
                                         <input type="file" class="form-control" name="profilePics" id="profilePicsFile"
-                                            accept="image/*">
+                                            accept="image/*" data-bs-toggle="modal" data-bs-target="#crop-modal">
                                         <label class="input-group-text" for="profilePicsFile">Upload</label>
                                     </div>
 
@@ -104,6 +109,29 @@
                 </div>
             </div>
         </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="crop-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Resize your image</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="cropped-img"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" id="cancel-cropping"
+                            data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="upload-img">Upload</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of Modal -->
+
     </div>
 
     <!-- Footer -->
@@ -111,6 +139,14 @@
 
         <!-- Bootstrap JS -->
         <%- include('../../partials/bootstrapCdnJs.ejs') %>
+
+            <!-- Croppie JS -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.5/croppie.js"
+                integrity="sha512-vUJTqeDCu0MKkOhuI83/MEX5HSNPW+Lw46BA775bAWIp1Zwgz3qggia/t2EnSGB9GoS2Ln6npDmbJTdNhHy1Yw=="
+                crossorigin="anonymous"></script>
+
+            <!-- Custom JS -->
+            <script src="/scripts/profilePicsUpload.js"></script>
 
             </body>
 
