validate create-profile

--- a/views/pages/dashboard/create-profile.ejs
+++ b/views/pages/dashboard/create-profile.ejs
@@ -16,8 +16,7 @@
                                 <img src="<%= user.profilePics %>" alt="Profile Pics" class="img-thumbnail img-fluid"
                                     id="profilePics">
 
-                                <form action="/uploads/profilePics" method="POST" enctype="multipart/form-data"
-                                    class="my-2" id="profilePicsForm">
+                                <form action="/uploads/profilePics" class="my-2" id="profilePicsForm">
                                     <div class="form-group my-3">
                                         <input type="file" class="form-control" name="profilePics" id="profilePicsFile"
                                             accept="image/*" data-bs-toggle="modal" data-bs-target="#crop-modal">
