--- a/views/pages/dashboard/edit-profile.ejs
+++ b/views/pages/dashboard/edit-profile.ejs
@@ -1,12 +1,172 @@
 <%- include('../../partials/header.ejs') %>
 
-    <div class="container my-4">
-        <h1 class="display-1 text-center">Welcome to Edit Profile</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2"></div>
+
+            <div class="col-md-10">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <div class="card card-body my-3">
+                            <h4 class="text-primary">
+                                <%= title %>
+                            </h4>
+
+                            <div class="profile-pics">
+                                <img src="<%= user.profilePics %>" alt="Profile Pics" class="img-thumbnail img-fluid"
+                                    id="profilePics">
+
+                                <form action="/uploads/profilePics" method="POST" enctype="multipart/form-data"
+                                    class="my-2" id="profilePicsForm">
+                                    <div class="form-group my-3">
+                                        <input type="file" class="form-control" name="profilePics" id="profilePicsFile"
+                                            accept="image/*" data-bs-toggle="modal" data-bs-target="#crop-modal">
+                                    </div>
+
+                                    <input type="button" value="Remove Pics" id="removeProfilePics"
+                                        class="btn btn-danger btn-sm my-2"
+                                        style="display: <%= user.profilePics.includes('default.png') ? 'none' : 'block' %>">
+                                </form>
+                            </div>
+
+                            <div>
+                                <form action="/dashboard/edit-profile" method="POST">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Name</span>
+                                        <input type="text" class="form-control <%= error.name ? 'is-invalid' : '' %>"
+                                            name="name" value="<%= profile.name %>" placeholder="Enter your name"
+                                            aria-label="Name">
+                                        <div class="invalid-feedback">
+                                            <%= error.name %>
+                                        </div>
+                                    </div>
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Email</span>
+                                        <input type="email" class="form-control" name="email" value="<%= user.email %> "
+                                            placeholder="Enter your email" aria-label="Email" disabled>
+                                    </div>
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Title</span>
+                                        <input type="text" class="form-control <%= error.title ? 'is-invalid' : '' %>"
+                                            name="title" value="<%= profile.title %>" placeholder="Enter a short title"
+                                            aria-label="Title">
+                                        <div class="invalid-feedback">
+                                            <%= error.title %>
+                                        </div>
+                                    </div>
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text">Short bio</span>
+                                        <textarea name="bio" class="form-control <%= error.bio ? 'is-invalid' : '' %>"
+                                            placeholder="Enter a short bio"
+                                            aria-label="Short bio"><%= profile.bio %></textarea>
+                                        <div class="invalid-feedback">
+                                            <%= error.bio %>
+                                        </div>
+                                    </div>
+
+                                    <div>
+                                        <p class="lead">Your social links</p>
+
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text">
+                                                <i class="fab fa-internet-explorer"></i>
+                                            </span>
+                                            <input type="text"
+                                                class="form-control <%= error.website ? 'is-invalid' : '' %>"
+                                                name="website" value="<%= profile.links.website %>"
+                                                placeholder="Website link">
+                                            <div class="invalid-feedback">
+                                                <%= error.website %>
+                                            </div>
+                                        </div>
+
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text">
+                                                <i class="fab fa-facebook-square"></i>
+                                            </span>
+                                            <input type="text"
+                                                class="form-control <%= error.facebook ? 'is-invalid' : '' %>"
+                                                name="facebook" value="<%= profile.links.facebook %>"
+                                                placeholder="Facebook link">
+                                            <div class="invalid-feedback">
+                                                <%= error.facebook %>
+                                            </div>
+                                        </div>
+
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text">
+                                                <i class="fab fa-twitter-square"></i>
+                                            </span>
+                                            <input type="text"
+                                                class="form-control <%= error.twitter ? 'is-invalid' : '' %>"
+                                                name="twitter" value="<%= profile.links.twitter %>"
+                                                placeholder="Twitter link">
+                                            <div class="invalid-feedback">
+                                                <%= error.twitter %>
+                                            </div>
+                                        </div>
+
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text">
+                                                <i class="fab fa-linkedin"></i>
+                                            </span>
+                                            <input type="text"
+                                                class="form-control <%= error.linkedIn ? 'is-invalid' : '' %>"
+                                                name="linkedIn" value="<%= profile.links.linkedIn %>"
+                                                placeholder="LinkedIn link">
+                                            <div class="invalid-feedback">
+                                                <%= error.linkedIn %>
+                                            </div>
+                                        </div>
+
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text">
+                                                <i class="fab fa-github"></i>
+                                            </span>
+                                            <input type="text"
+                                                class="form-control <%= error.github ? 'is-invalid' : '' %>"
+                                                name="github" value="<%= profile.links.github %>"
+                                                placeholder="Github link">
+                                            <div class="invalid-feedback">
+                                                <%= error.github %>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <input type="submit" class="btn btn-primary my-2" value="Update Profile">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="crop-modal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Resize your image</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="cropped-img"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" id="cancel-cropping"
+                            data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="upload-img">Upload</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <%- include('../../partials/footer.ejs') %>
 
         <%- include('../../partials/bootstrapCdnJs.ejs') %>
+
+            <script src="/scripts/profilePicsUpload.js"></script>
 
             </body>
 
