tiny MCE frontend setup

--- a/views/pages/dashboard/post/createPost.ejs
+++ b/views/pages/dashboard/post/createPost.ejs
@@ -41,7 +41,12 @@
 
     <%- include('../../../partials/footer.ejs') %>
 
+        <script src="https://cdn.tiny.cloud/1/3702vjg26ub974q8mqebkz9ksgujnprpiuq1ximi92cvgd8b/tinymce/5/tinymce.min.js"
+            referrerpolicy="origin"></script>
+
         <%- include('../../../partials/bootstrapCdnJs.ejs') %>
+
+            <script src="/scripts/tinymce.js"></script>
 
             </body>
 
