--- a/views/pages/dashboard/post/createPost.ejs
+++ b/views/pages/dashboard/post/createPost.ejs
@@ -13,17 +13,24 @@
                     <form action="/posts/create" method="POST" enctype="multipart/form-data">
                         <div class="form-group my-3">
                             <label for="title">Enter your post title</label>
-                            <input type="text" name="title" id="title" class="form-control">
+                            <input type="text" name="title" id="title" value="<%= value.title ? value.title : '' %>"
+                                class="form-control <%= error.title ? 'is-invalid' : '' %>">
+                            <div class="invalid-feedback">
+                                <%= error.title %>
+                            </div>
                         </div>
                         <div class="form-group mb-3">
                             <label for="tiny-mce-post-body">Enter your post body</label>
-                            <textarea name="body" id="tiny-mce-post-body" class="form-control">
-                            </textarea>
+                            <textarea name="body" id="tiny-mce-post-body"
+                                class="form-control <%= error.body ? 'is-invalid' : '' %>"><%= value.body ? value.body : '' %></textarea>
+                            <div class="invalid-feedback">
+                                <%= error.body %>
+                            </div>
                         </div>
                         <div class="form-group mb-3">
                             <label for="tags">Enter some tags (Max 10)</label>
-                            <input type="text" name="tags" id="tags" class="form-control"
-                                placeholder="tag1, tag2, tag3">
+                            <input type="text" name="tags" id="tags" value="<%= value.tags ? value.tags : '' %>"
+                                class="form-control" placeholder="tag1, tag2, tag3">
                         </div>
                         <div class="input-group mb-3">
                             <input type="file" name="post-thumbnail" class="form-control" id="inputGroupFile">
