--- a/views/pages/dashboard/post/editPost.ejs
+++ b/views/pages/dashboard/post/editPost.ejs
@@ -13,7 +13,7 @@
                     <form action="/posts/create" method="POST" enctype="multipart/form-data">
                         <div class="form-group my-3">
                             <label for="title">Enter your post title</label>
-                            <input type="text" name="title" id="title" value="<%= value.title ? value.title : '' %>"
+                            <input type="text" name="title" id="title" value="<%= post.title %>"
                                 class="form-control <%= error.title ? 'is-invalid' : '' %>">
                             <div class="invalid-feedback">
                                 <%= error.title %>
@@ -22,22 +22,29 @@
                         <div class="form-group mb-3">
                             <label for="tiny-mce-post-body">Enter your post body</label>
                             <textarea name="body" id="tiny-mce-post-body"
-                                class="form-control <%= error.body ? 'is-invalid' : '' %>"><%= value.body ? value.body : '' %></textarea>
+                                class="form-control <%= error.body ? 'is-invalid' : '' %>"><%= post.body %></textarea>
                             <div class="invalid-feedback">
                                 <%= error.body %>
                             </div>
                         </div>
                         <div class="form-group mb-3">
                             <label for="tags">Enter some tags (Max 10)</label>
-                            <input type="text" name="tags" id="tags" value="<%= value.tags ? value.tags : '' %>"
-                                class="form-control" placeholder="tag1, tag2, tag3">
-                        </div>
-                        <div class="input-group mb-3">
-                            <input type="file" name="post-thumbnail" class="form-control" id="inputGroupFile">
-                            <label class="input-group-text" for="inputGroupFile">Upload</label>
+                            <input type="text" name="tags" id="tags"
+                                value="<%= post.tags.length > 0 ? post.tags.join(', ') : '' %>" class="form-control"
+                                placeholder="tag1, tag2, tag3">
                         </div>
 
-                        <input type="submit" class="btn btn-primary" value="Create Post">
+                        <% if(post.thumbnail) { %>
+                            <label>Post thumbnail</label>
+                            <img src="<%= post.thumbnail %>" alt="post thumbnail" id="thumbnail" class="img-fluid mb-3">
+                            <% } %>
+
+                                <div class="input-group mb-3">
+                                    <input type="file" name="post-thumbnail" class="form-control" id="inputGroupFile">
+                                    <label class="input-group-text" for="inputGroupFile">Upload</label>
+                                </div>
+
+                                <input type="submit" class="btn btn-primary" value="Update Post">
                     </form>
                 </div>
 
