--- a/views/pages/dashboard/post/editPost.ejs
+++ b/views/pages/dashboard/post/editPost.ejs
@@ -10,7 +10,7 @@
                     <h4 class="text-primary">
                         <%= title %>
                     </h4>
-                    <form action="/posts/create" method="POST" enctype="multipart/form-data">
+                    <form action="/posts/edit/<%= post._id %>" method="POST" enctype="multipart/form-data">
                         <div class="form-group my-3">
                             <label for="title">Enter your post title</label>
                             <input type="text" name="title" id="title" value="<%= post.title %>"
