--- a/views/pages/dashboard/post/editPost.ejs
+++ b/views/pages/dashboard/post/editPost.ejs
@@ -45,6 +45,9 @@
                                 </div>
 
                                 <input type="submit" class="btn btn-primary" value="Update Post">
+                                <a class="btn btn-danger" href="/posts/delete/<%= post._id %>">
+                                    Delete Post
+                                </a>
                     </form>
                 </div>
 
