--- a/views/pages/dashboard/dashboard.ejs
+++ b/views/pages/dashboard/dashboard.ejs
@@ -1,7 +1,20 @@
 <%- include('../../partials/header.ejs') %>
 
-    <div class="container my-4">
-        <h1 class="display-1 text-center">Welcome to my Dashboard</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
+                <%- include('../../partials/sidebar.ejs') %>
+            </div>
+
+            <div class="col-md-10">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <h1 class="text-center display-4">My Dashboard</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <%- include('../../partials/footer.ejs') %>
