--- a/views/pages/dashboard/post/editPost.ejs
+++ b/views/pages/dashboard/post/editPost.ejs
@@ -2,7 +2,9 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-2"></div>
+            <div class="col-md-2">
+                <%- include('../../../partials/sidebar.ejs') %>
+            </div>
 
             <div class="col-md-10">
 
