--- a/views/pages/explorer/explorer.ejs
+++ b/views/pages/explorer/explorer.ejs
@@ -3,7 +3,7 @@
     <div class="container my-3">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <section class="mb-5">
+                <section class="my-3 text-center">
                     <a href="/explorer?filter=latest"
                         class="btn <%= filter==='latest' ? 'btn-primary' : 'btn-secondary' %> btn-sm">Latest</a>
                     <a href="/explorer?filter=week"
@@ -13,7 +13,7 @@
                     <a href="/explorer?filter=all"
                         class="btn <%= filter==='all' ? 'btn-primary' : 'btn-secondary' %> btn-sm">All</a>
                 </section>
-                <section>
+                <section class="my-3">
                     <% if(posts.length===0) { %>
                         <p class="text-center text-muted">There is no posts available</p>
                         <% } else { %>
@@ -33,7 +33,9 @@
                                             <div class="d-flex">
                                                 <small>
                                                     <%= moment(post.createdAt) %> |
-                                                        Posted by |
+                                                        Posted by <a href="/author/<%= post.author._id %>">
+                                                            <%= post.author.username %>
+                                                        </a> |
                                                         <%= post.readTime %>
                                                 </small>
                                             </div>
