reply comment from frontend

--- a/views/pages/explorer/singlePagePostView.ejs
+++ b/views/pages/explorer/singlePagePostView.ejs
@@ -91,9 +91,9 @@
                                                                             <% for (let reply of comment.replies) { %>
                                                                                 <div class="media">
                                                                                     <img src="<%= reply.user.profilePics %>"
-                                                                                        class="align-self-start mr-3 rounded-circle"
-                                                                                        style="width: 40px;">
-                                                                                    <div class="media-body">
+                                                                                        class="align-self-start mx-5 rounded-circle"
+                                                                                        style="width: 30px;">
+                                                                                    <div class="media-body mx-5">
                                                                                         <p>
                                                                                             <%= reply.body %>
                                                                                         </p>
