--- a/views/pages/explorer/singlePagePostView.ejs
+++ b/views/pages/explorer/singlePagePostView.ejs
@@ -127,10 +127,7 @@
 
         <%- include('../../partials/bootstrapCdnJs.ejs') %>
 
-            <script src="/scripts/bookmarks.js"></script>
-            <script src="/scripts/likeDislike.js"></script>
-            <script src="/scripts/comment.js"></script>
-
+            <script src="/scripts/all.js"></script>
 
             </body>
 
