--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -27,8 +27,8 @@
                         <% } %>
             </ul>
 
-            <form action="/explorer/search" class="d-flex" method="GET">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form action="/search" class="d-flex" method="GET">
+                <input class="form-control me-2" type="search" name="term" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
